[package]
windows = ["windows_gui"]
name = "kalkulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui ={ version = "0.27.1"}
egui_extras = "0.27.1"
eframe = { version = "0.27.1"}
image ={ version = "*"}